--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -1,7 +1,7 @@
 # Integration Tests
 # Build aiverify and run QA test suites
 
-name: v2 Integration Tests (UI And APIGW)
+name: v2 Integration Tests
 
 env:
   GITHUB_TOKEN: ${{ github.token }}
@@ -26,11 +26,11 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  setup:
+  Integration-Test:
     
     # Run only on Workflow Dispatch and Schedule
     runs-on: self-hosted-aiverify
-    timeout-minutes: 180
+    timeout-minutes: 300
     permissions:
       id-token: write
       contents: read
@@ -139,20 +139,6 @@ jobs:
           ls -la
 
           echo "Integration Test Data Prepared"
-
-  Integration-Test-UI-And-APIGW:
-    
-    # Run only on Workflow Dispatch and Schedule
-    runs-on: self-hosted-aiverify
-    timeout-minutes: 180
-    permissions:
-      id-token: write
-      contents: read
-      packages: write
-    
-    needs: setup
-
-    steps:
       
       # Run UI Integration Test
       - name: Run UI Integration Test
@@ -178,42 +164,27 @@ jobs:
           npm install
           npx playwright install --with-deps
           URL=http://127.0.0.1 PORT_NUMBER=4000 ROOT_PATH=$GITHUB_WORKSPACE/stock-plugins/user_defined_files npx playwright test tests/apigw
-
-  Integration-Test-Standalone-Plugins:
-    
-    # Run only on Workflow Dispatch and Schedule
-    runs-on: self-hosted-aiverify
-    timeout-minutes: 240
-    permissions:
-      id-token: write
-      contents: read
-      packages: write
-
-    needs: setup
-
-    steps:
       
       # Clean slate to force rebuild all images
-      # - name: Delete all local Docker images
-      #   run: |
-      #     docker ps -q | xargs -r docker stop
-      #     docker images -q | xargs -r docker rmi -f
-      #     docker system prune -a -f
-      #     docker volume prune --all -f
-      #     docker builder prune -a -f
+      - name: Delete all local Docker images
+        run: |
+          docker ps -q | xargs -r docker stop
+          docker images -q | xargs -r docker rmi -f
+          docker system prune -a -f
+          docker volume prune --all -f
+          docker builder prune -a -f
 
       # Build and Launch Docker Containers
-      # - name: Build and Launch Docker Containers
-      #   run: |
+      - name: Build and Launch Docker Containers
+        run: |
+          docker build -t aiverify-python-base -f aiverify-test-engine/Dockerfile --no-cache .
+          docker build -t aiverify-apigw -f aiverify-apigw/Dockerfile --no-cache .
+          docker build -t aiverify-test-engine-worker -f aiverify-test-engine-worker/Dockerfile --no-cache .
 
-      #     docker build -t aiverify-python-base -f aiverify-test-engine/Dockerfile --no-cache .
-      #     docker build -t aiverify-apigw -f aiverify-apigw/Dockerfile --no-cache .
-      #     docker build -t aiverify-test-engine-worker -f aiverify-test-engine-worker/Dockerfile --no-cache .
-
-      #     cd deployment/docker-compose-dev
-      #     docker-compose --profile automated-tests-venv up -d
-      #     echo "Initialising AI Verify Plugins"
-      #     sleep 5m
+          cd deployment/docker-compose-dev
+          docker-compose --profile automated-tests-venv up -d
+          echo "Initialising AI Verify Plugins"
+          sleep 5m
 
       # Run Standalone Plugin Integration Test
       - name: Run Standalone Plugin Integration Test
