Revert From Command to Pull from GHCR

--- a/aiverify-apigw/Dockerfile.ci
+++ b/aiverify-apigw/Dockerfile.ci
@@ -6,8 +6,7 @@
 ARG PYTHON_VERSION=3.12
 
 # Stage 1: Build stage
-# FROM ghcr.io/aiverify-foundation/aiverify-python-base AS build
-FROM aiverify-python-base AS build
+FROM ghcr.io/aiverify-foundation/aiverify-python-base AS build
 ARG TARGETARCH
 
 RUN apt-get update && \
