Change Docker Build Commands Back to Buildx

--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -96,13 +96,13 @@ jobs:
           mv Dockerfile.ci Dockerfile
           cd ../
           
-          docker build -t aiverify-python-base -f aiverify-test-engine/Dockerfile --no-cache .
-          docker build -t aiverify-apigw -f aiverify-apigw/Dockerfile --no-cache .
-          docker build -t aiverify-test-engine-worker -f aiverify-test-engine-worker/Dockerfile --no-cache .
-          docker build -t aiverify-portal -f aiverify-portal/Dockerfile --no-cache .
+          docker buildx build -t aiverify-python-base -f aiverify-test-engine/Dockerfile --no-cache .
+          # docker build -t aiverify-apigw -f aiverify-apigw/Dockerfile --no-cache .
+          # docker build -t aiverify-test-engine-worker -f aiverify-test-engine-worker/Dockerfile --no-cache .
+          # docker build -t aiverify-portal -f aiverify-portal/Dockerfile --no-cache .
 
           cd deployment/docker-compose-dev
-          docker-compose --profile automated-tests-venv --profile portal up -d
+          COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker-compose --profile automated-tests-venv --profile portal up -d
           echo "Initialising AI Verify Plugins"
           sleep 5m
 
