--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -95,13 +95,13 @@ jobs:
           mv Dockerfile.ci Dockerfile
           cd ../
           
-          docker build -t aiverify-python-base -f aiverify-test-engine/Dockerfile --no-cache .
-          docker build -t aiverify-apigw -f aiverify-apigw/Dockerfile --no-cache .
-          docker build -t aiverify-test-engine-worker -f aiverify-test-engine-worker/Dockerfile --no-cache .
-          docker build -t aiverify-portal -f aiverify-portal/Dockerfile --no-cache .
+          docker buildx build -t aiverify-python-base -f aiverify-test-engine/Dockerfile --no-cache .
+          # docker build -t aiverify-apigw -f aiverify-apigw/Dockerfile --no-cache .
+          # docker build -t aiverify-test-engine-worker -f aiverify-test-engine-worker/Dockerfile --no-cache .
+          # docker build -t aiverify-portal -f aiverify-portal/Dockerfile --no-cache .
 
           cd deployment/docker-compose-dev
-          docker-compose --profile automated-tests-venv --profile portal up -d
+          COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker-compose --profile automated-tests-venv --profile portal up -d
           echo "Initialising AI Verify Plugins"
           sleep 5m
           
@@ -177,13 +177,15 @@ jobs:
       # Build and Launch Docker Containers
       - name: Build and Launch Docker Containers
         run: |
-          docker build -t aiverify-python-base -f aiverify-test-engine/Dockerfile --no-cache .
-          docker build -t aiverify-apigw -f aiverify-apigw/Dockerfile --no-cache .
-          docker build -t aiverify-test-engine-worker -f aiverify-test-engine-worker/Dockerfile --no-cache .
+          docker buildx build -t aiverify-python-base -f aiverify-test-engine/Dockerfile --no-cache .
+          # docker build -t aiverify-apigw -f aiverify-apigw/Dockerfile --no-cache .
+          # docker build -t aiverify-test-engine-worker -f aiverify-test-engine-worker/Dockerfile --no-cache .
+          # docker build -t aiverify-portal -f aiverify-portal/Dockerfile --no-cache .
 
           cd deployment/docker-compose-dev
-          docker-compose --profile automated-tests-venv up -d
+          COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker-compose --profile automated-tests-venv up -d
           echo "Initialising AI Verify Plugins"
+          sleep 5mlising AI Verify Plugins"
           sleep 5m
 
       # Run Standalone Plugin Integration Test
