--- a/.github/workflows/v2-docker-build-push-ecr.yml
+++ b/.github/workflows/v2-docker-build-push-ecr.yml
@@ -53,10 +53,15 @@ on:
   # push:
   #   branches:
   #     - 'ci/image-scan-ecr'
+
+# Allow one concurrent deployment
+concurrency:
+  group: self-hosted-runner
+  cancel-in-progress: false
  
 jobs:
   build-and-push:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted-aiverify
     timeout-minutes: 360
     permissions:
       id-token: write
