--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -23,7 +23,7 @@ on:
 
 # Allow one concurrent deployment
 concurrency:
-  group: automated-testing
+  group: self-hosted-runner
   cancel-in-progress: false
 
 jobs:
