Change Concurrency Group for Integration Test

--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -22,7 +22,7 @@ on:
 
 # Allow one concurrent deployment
 concurrency:
-  group: automated-testing
+  group: self-hosted-runner
   cancel-in-progress: false
 
 jobs:
