--- a/.github/workflows/v2-docker-build-push-ecr.yml
+++ b/.github/workflows/v2-docker-build-push-ecr.yml
@@ -90,6 +90,11 @@ jobs:
       max-parallel: 1
 
     steps:
+      
+      # Change Existing File Permissions For Later Removal During Checkout of AI Verify
+      - name: Change Existing File Permissions From Previous Runs
+        run: |
+          sudo chmod -R 777 .
 
       # Check out the source code from the specified branch
       - name: Checkout code
@@ -98,9 +103,18 @@ jobs:
           ref: ${{ github.event.inputs.branch || 'main' }}
       
       # Free up disk space before building large Docker images
-      - name: Free up disk space
+      # - name: Free up disk space
+      #   run: |
+      #     bash .ci/free_disk_space.sh
+
+      # Clean slate to force rebuild all images
+      - name: Delete all local Docker images
         run: |
-          bash .ci/free_disk_space.sh
+          docker ps -q | xargs -r docker stop
+          docker images -q | xargs -r docker rmi -f
+          docker system prune -a -f
+          docker volume prune --all -f
+          docker builder prune -a -f
 
       # Set BUILD_BASE flag
       - name: Set BUILD_BASE flag
