Change Docker Build Commands

--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -93,12 +93,11 @@ jobs:
           cd aiverify-apigw
           rm Dockerfile
           mv Dockerfile.ci Dockerfile
+
+          cd ../aiverify-test-engine-worker
+          rm Dockerfile
+          mv Dockerfile.ci Dockerfile
           cd ../
-          
-          docker buildx build -t aiverify-python-base -f aiverify-test-engine/Dockerfile --no-cache .
-          # docker build -t aiverify-apigw -f aiverify-apigw/Dockerfile --no-cache .
-          # docker build -t aiverify-test-engine-worker -f aiverify-test-engine-worker/Dockerfile --no-cache .
-          # docker build -t aiverify-portal -f aiverify-portal/Dockerfile --no-cache .
 
           cd deployment/docker-compose-dev
           COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker-compose --profile automated-tests-venv --profile portal up -d
@@ -177,11 +176,6 @@ jobs:
       # Build and Launch Docker Containers
       - name: Build and Launch Docker Containers
         run: |
-          docker buildx build -t aiverify-python-base -f aiverify-test-engine/Dockerfile --no-cache .
-          # docker build -t aiverify-apigw -f aiverify-apigw/Dockerfile --no-cache .
-          # docker build -t aiverify-test-engine-worker -f aiverify-test-engine-worker/Dockerfile --no-cache .
-          # docker build -t aiverify-portal -f aiverify-portal/Dockerfile --no-cache .
-
           cd deployment/docker-compose-dev
           COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker-compose --profile automated-tests-venv up -d
           echo "Initialising AI Verify Plugins"
