--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -94,12 +94,11 @@ jobs:
           cd aiverify-apigw
           rm Dockerfile
           mv Dockerfile.ci Dockerfile
+
+          cd ../aiverify-test-engine-worker
+          rm Dockerfile
+          mv Dockerfile.ci Dockerfile
           cd ../
-          
-          docker buildx build -t aiverify-python-base -f aiverify-test-engine/Dockerfile --no-cache .
-          # docker build -t aiverify-apigw -f aiverify-apigw/Dockerfile --no-cache .
-          # docker build -t aiverify-test-engine-worker -f aiverify-test-engine-worker/Dockerfile --no-cache .
-          # docker build -t aiverify-portal -f aiverify-portal/Dockerfile --no-cache .
 
           cd deployment/docker-compose-dev
           COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker-compose --profile automated-tests-venv --profile portal up -d
