Update Dockerfile Path

--- a/.github/workflows/v2-docker-build-push-ecr.yml
+++ b/.github/workflows/v2-docker-build-push-ecr.yml
@@ -126,7 +126,7 @@ jobs:
         if: (matrix.image_name == 'aiverify-test-engine-worker' || matrix.image_name == 'aiverify-apigw') && env.BUILD_BASE == 'true'
         run: |
           chmod +x .ci/docker_build_push.sh
-          bash .ci/docker_build_push.sh aiverify-python-base latest aiverify-foundation aiverify-test-engine
+          bash .ci/docker_build_push.sh aiverify-python-base latest aiverify-foundation aiverify-test-engine/Dockerfile
 
       # Configure AWS credentials using OIDC
       - name: Configure AWS credentials
