--- a/.github/workflows/v2-docker-build-push.yml
+++ b/.github/workflows/v2-docker-build-push.yml
@@ -167,7 +167,7 @@ jobs:
   run-image-build-push:
     needs: init-image-build-push
     if: ${{ needs.init-image-build-push.outputs.matrix != '{"include":[]}' }}
-    runs-on: ubuntu-latest
+    runs-on: self-hosted-aiverify
     timeout-minutes: 360
     strategy:
       matrix: ${{ fromJson(needs.init-image-build-push.outputs.matrix) }}
@@ -187,9 +187,9 @@ jobs:
           ref: ${{ needs.init-image-build-push.outputs.branch_to_test }}
 
       # Free up disk space before building large images
-      - name: Free up disk space
-        run: |
-          bash .ci/free_disk_space.sh      
+      # - name: Free up disk space
+      #   run: |
+      #     bash .ci/free_disk_space.sh      
 
       # Clean slate to force rebuild all images
       - name: Delete all local Docker images
