--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -29,7 +29,7 @@ jobs:
   Integration-Test:
     
     # Run only on Workflow Dispatch and Schedule
-    runs-on: self-hosted-aiverify
+    runs-on: ubuntu-latest-m
     timeout-minutes: 300
     permissions:
       id-token: write
