--- a/.github/workflows/v2-docker-build-push.yml
+++ b/.github/workflows/v2-docker-build-push.yml
@@ -44,9 +44,9 @@ on:
       - '**/pyproject.toml'
       - '**/package.json'
 
-# Allow one concurrent deployment
+# Allow concurrent runs of the same workflow (currently ubuntu-latest-m configured to allow 10 concurrent runs)
 concurrency:
-  group: self-hosted-runner
+  group: ${{ github.repository }}-${{ github.workflow }}
   cancel-in-progress: false
 
 jobs:
