--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -8,8 +8,8 @@ env:
 
 on:
   # Run this workflow everyday at 11:05pm Singapore Time (15:05am UTC)
-  schedule:
-    - cron: "05 15 * * *"
+  # schedule:
+  #   - cron: "05 15 * * *"
 
   # Run this workflow manually from Actions tab
   workflow_dispatch:
