--- a/stock-plugins/aiverify.stock.veritas/algorithms/veritastool/pyproject.toml
+++ b/stock-plugins/aiverify.stock.veritas/algorithms/veritastool/pyproject.toml
@@ -23,6 +23,9 @@ dependencies = [
     "tqdm>=4.67.1",
     "Jinja2>=3.1.5",
     "aiverify-test-engine>=2.2.0",
+    
+    # Constraints for sub-dependencies
+    "coverage==7.6.1",
 ]
 requires-python = ">=3.10,<3.13"
 dynamic = ["version"]
