[WS-295] Exclude venv/node_modules/pyc from main branch in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,12 @@ docs/.DS_Store
 
 #deployment
 site/
+
+# Project output files
+stock-plugins/user_defined_files/output/
+
+# Runtime/compile files
+**/venv/
+**/.venv/
+**/node_modules/
+*.pyc
